--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "express-handlebars": "^3.1.0"
+    "mongoose": "^5.9.4"
   }
 }
