--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
   "homepage": "https://github.com/bchansen123/Borrow#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chalk": "^3.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.9.4"
+    "http-proxy-middleware": "^1.0.3",
+    "mongoose": "^5.9.4",
+    "passport-facebook": "^3.0.0",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
